--- a/Bookify-client/Bookify/src/app/feature-modules/accommodation/update/accommodation-photos/accommodation-photos.component.html
+++ b/Bookify-client/Bookify/src/app/feature-modules/accommodation/update/accommodation-photos/accommodation-photos.component.html
@@ -1,7 +1,7 @@
 <label for="fileInput" class="custom-file-label">
   <span>Upload Photos</span>
 </label>
-<input type="file" name="photos" id="fileInput" (change)="onFilesSelected($event)" multiple class="custom-file-input" />
+<input type="file" name="photos" id="fileInput" (change)="onFilesSelected($event)" multiple class="custom-file-input" accept=".jpg, .jpeg, .png"/>
 <label class="hint">Upload at least one photo</label>
 <div class="selected-images-container">
   <div *ngFor="let image of selectedImagesObject" class="image-container">
