--- a/Bookify-client/Bookify/src/app/feature-modules/authentication/registration/registration.component.html
+++ b/Bookify-client/Bookify/src/app/feature-modules/authentication/registration/registration.component.html
@@ -1,4 +1,4 @@
-<div class="registration-container">
+<!-- <div class="registration-container">
     <div class="registration-registration">
         <div class="background">
             <img src="../../../../assets/images/background-image.png" alt="image255165" class="background-image" />
@@ -104,4 +104,4 @@
             </div>
         </form>
     </div>
-</div>
+</div> -->
